--- a/package.json
+++ b/package.json
@@ -8,9 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
+    "express-jwt": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.7",
+    "prop-types": "^15.8.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5",
+    "rxjs": "^7.5.1",
+    "sass": "^1.45.1",
+    "scss": "^0.2.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.5.0",
