--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-toastify": "^8.1.0",
     "rxjs": "^7.5.1",
     "sass": "^1.45.1",
     "scss": "^0.2.4",
+    "toastr": "^2.1.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
