--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.8.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
